Fix margin bug on single-page full-bleed reports
Add margin to bottom of full-bleed header image on single page report

--- a/newamericadotorg/assets/react/report/components/Heading.scss
+++ b/newamericadotorg/assets/react/report/components/Heading.scss
@@ -19,6 +19,10 @@
     @media (min-height: 1200px) {
       height: calc(100vh - 70px - 2.3vh);
     }
+
+    .single-page & {
+      margin-bottom: 80px;
+    }
   }
 }
 
